--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-alpha1'
+        classpath 'com.android.tools.build:gradle:2.1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,4 +20,18 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext{
+    minSdkVersion = 19
+    compileSdkVersion = 23
+    targetSdkVersion =23
+    buildToolsVersion ='23.0.3'
+
+
+    supportLibraryVersion = '23.4.0'
+    constraintLayoutVersion = '1.0.0-alpha1'
+    gsonVersion ='2.6.2'
+    retrofit2Version ='2.0.2'
+    guavaVersion = '18.0'
 }
